Adjustments to the current T3 skin to avoid too much waste of space

--- a/Resources/Public/Backend/Css/Skin/GridElementsDD.css
+++ b/Resources/Public/Backend/Css/Skin/GridElementsDD.css
@@ -9,7 +9,6 @@
 	display: none;
 }
 .x-dd-makedroptarget {
-    margin-bottom: 3px;
 }
 
 .x-dd-droptargetarea {
